--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,68 @@
-.pytest_cache
+# Python
 __pycache__/
-*.pyc
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
 .venv/
-.claude
-CLAUDE.md
+venv/
+ENV/
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+
+# Jupyter
+.ipynb_checkpoints/
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Project specific - large files
+checkpoints/
+outputs/
+data/
+*.ckpt
+*.safetensors
+*.bin
+*.h5
+*.pt
+*.pth
+
+# Hydra outputs
+outputs/
+multirun/
+
+# Claude
+.claude/
+
+# Local config
+.env
+*.local
