--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,15 @@ wandb = [
     "wandb>=0.16.0",
 ]
 
+serve = [
+    "fastapi>=0.109.0",
+    "uvicorn>=0.27.0",
+    "python-multipart>=0.0.6",
+]
+
+[project.scripts]
+constitutional-audio = "decrescendo.constitutional_audio.cli:main"
+
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
